[package]
name = "locksidian"
version = "0.1.0"
authors = ["Valentin Fries <contact@fries.io>", "Aurélien Duval"]

[dependencies]
time = "0.1.36"
rust-crypto = "0.2.36"
iron = "0.5.1"
router = "0.5.1"
iron-test = "0.5.0"
serde_json = "0.9.5"

[dependencies.bodyparser]
git = "https://github.com/iron/body-parser.git"