[package]
name = "locksidian"
version = "0.1.1"
description = "The one vault your data really need"
authors = ["Valentin Fries <contact@fries.io>", "Aurélien Duval <aurelien.duval6@gmail.com>"]

[dependencies]
getopts = "0.2"
time = "0.1.36"

openssl = "0.9.10"
rust-crypto = "0.2.36"
rustc-serialize = "0.3.22"

serde = "0.9.6"
serde_derive = "0.9.6"
serde_json = "0.9.5"
serde_wat = "0.1.0"

hyper = "0.10.4"

iron = "0.5.1"
router = "0.5.1"
iron-test = "0.5.0"

diesel = {version = "0.11.4", features = ["sqlite"]}
diesel_codegen = "0.11.0"

r2d2 = "0.7.1"
r2d2-diesel = "0.11.0"

[dependencies.bodyparser]
git = "https://github.com/iron/body-parser.git"